--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>cn.zko0.remotelabel</groupId>
     <artifactId>Rmote_Label_System</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>remote-label-commons</module>
+        <module>remote-label-label-manage</module>
+        <module>remote-label-moniter-register</module>
+        <module>remote-label-user</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
