--- a/remote-label-commons/pom.xml
+++ b/remote-label-commons/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.zko0.remotelabel</groupId>
-        <artifactId>Rmote_Label_System</artifactId>
+        <artifactId>remote-label-system-cloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
