--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,11 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>remote-label-commons</module>
-        <module>remote-label-feign-client</module>
+
         <module>remote-label-gateway</module>
-        <module>remote-label-label-manage</module>
-        <module>remote-label-moniter-register</module>
-        <module>remote-label-user</module>
+        <module>remote-label-service</module>
+        <module>remote-label-sentinel</module>
+
     </modules>
 
     <!-- 统一管理jar包版本 -->
@@ -99,6 +98,18 @@
 
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 
 
 </project>
