--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>remote-label-gateway</module>
         <module>remote-label-service</module>
         <module>remote-label-sentinel</module>
+        <module>remote-label-service/remote-label-user</module>
+        <module>remote-label-service/remote-label-api/remote-label-api-label-user</module>
 
     </modules>
 
