--- a/remote-label-service/remote-label-api/pom.xml
+++ b/remote-label-service/remote-label-api/pom.xml
@@ -7,34 +7,19 @@
         <artifactId>remote-label-service</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <modules>
+        <module>remote-label-api-label-user</module>
+    </modules>
     <groupId>cn.zko0</groupId>
     <artifactId>remote-label-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>remote-label-feign-client</name>
     <description>remote-label-feign-client</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>8</java.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <packaging>pom</packaging>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
