--- a/remote-label-service/remote-label-user/pom.xml
+++ b/remote-label-service/remote-label-user/pom.xml
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.zko0</groupId>
         <artifactId>remote-label-service</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
     <groupId>cn.zko0</groupId>
     <artifactId>remote-label-user</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -16,7 +16,6 @@
     <properties>
         <java.version>8</java.version>
     </properties>
-
 
     <dependencies>
         <!--SpringCloud Alibaba nacos-->
@@ -56,20 +55,20 @@
         </dependency>
 
 
-        <!--mybatis plus-->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.2</version>
-        </dependency>
+        <!--        &lt;!&ndash;mybatis plus&ndash;&gt;
+                <dependency>
+                    <groupId>com.baomidou</groupId>
+                    <artifactId>mybatis-plus-boot-starter</artifactId>
+                    <version>3.5.2</version>
+                </dependency>-->
 
-<!--        &lt;!&ndash;代码生成器&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.github.davidfantasy</groupId>-->
-<!--            <artifactId>mybatis-plus-generator-ui</artifactId>-->
-<!--            <version>2.0.0</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
+        <!--        &lt;!&ndash;代码生成器&ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.davidfantasy</groupId>-->
+        <!--            <artifactId>mybatis-plus-generator-ui</artifactId>-->
+        <!--            <version>2.0.0</version>-->
+        <!--            <scope>test</scope>-->
+        <!--        </dependency>-->
 
         <!--mysql驱动-->
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -85,9 +84,13 @@
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>1.34.0</version>
         </dependency>
+        <dependency>
+            <groupId>cn.zko0</groupId>
+            <artifactId>remote-label-commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
-
-
 
 </project>
