--- a/remote-label-service/remote-label-user/pom.xml
+++ b/remote-label-service/remote-label-user/pom.xml
@@ -55,23 +55,21 @@
         </dependency>
 
 
-        <!--        &lt;!&ndash;mybatis plus&ndash;&gt;
-                <dependency>
-                    <groupId>com.baomidou</groupId>
-                    <artifactId>mybatis-plus-boot-starter</artifactId>
-                    <version>3.5.2</version>
-                </dependency>-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.2</version>
+        </dependency>
 
-        <!--        &lt;!&ndash;代码生成器&ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.davidfantasy</groupId>-->
-        <!--            <artifactId>mybatis-plus-generator-ui</artifactId>-->
-        <!--            <version>2.0.0</version>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
+<!--        &lt;!&ndash;代码生成器&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.davidfantasy</groupId>-->
+<!--            <artifactId>mybatis-plus-generator-ui</artifactId>-->
+<!--            <version>2.0.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
         <!--mysql驱动-->
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -84,6 +82,20 @@
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>1.34.0</version>
         </dependency>
+        <!-- Sa-Token 整合 Redis （使用 jackson 序列化方式） -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-dao-redis-jackson</artifactId>
+            <version>1.34.0</version>
+        </dependency>
+        <!-- 提供Redis连接池 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
+
+
         <dependency>
             <groupId>cn.zko0</groupId>
             <artifactId>remote-label-commons</artifactId>
@@ -94,11 +106,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
-        <!--rabbitmq-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
     </dependencies>
