--- a/remote-label-service/remote-label-moniter-register/src/main/resources/application.yml
+++ b/remote-label-service/remote-label-moniter-register/src/main/resources/application.yml
@@ -8,6 +8,26 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
+  redis:
+    # Redis数据库索引（默认为0）
+    database: 0
+    # Redis服务器地址
+    host: 127.0.0.1
+    # Redis服务器连接端口
+    port: 6379
+    jedis:
+      pool:
+        # 连接池最大连接数（使用负值表示没有限制）
+        max-active: 8
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: 1
+        # 连接池中的最大空闲连接
+        max-idle: 8
+        # 连接池中的最小空闲连接
+        min-idle: 0
+    # 连接超时时间（毫秒）
+    timeout: 5000
+
 
 #actuator
 management:
@@ -15,3 +35,10 @@ management:
     web:
       exposure:
         include: '*'
+
+mqtt:
+  port: 1884
+  userName: root
+  password: 123456
+  server:
+    status: on
