对接mqtt客户端测试工具，完善label-manage模块(需要新增数据统计模块，拆分出moniter-register)

--- a/remote-label-gateway/pom.xml
+++ b/remote-label-gateway/pom.xml
@@ -63,7 +63,7 @@
 
         <dependency>
             <groupId>cn.zko0</groupId>
-            <artifactId>remote-label-api-label-user</artifactId>
+            <artifactId>remote-label-api-user</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
             <exclusions>
