--- a/remote-label-service/remote-label-label-manage/src/main/resources/application.yml
+++ b/remote-label-service/remote-label-label-manage/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/remote_label_manage?autoReconnect=true
+    username: root
+    password: 123456
 
 #actuator
 management:
