--- a/remote-label-service/remote-label-api/pom.xml
+++ b/remote-label-service/remote-label-api/pom.xml
@@ -8,7 +8,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modules>
-        <module>remote-label-api-label-user</module>
+        <module>remote-label-api-user</module>
+        <module>remote-label-api-label-manage</module>
     </modules>
     <groupId>cn.zko0</groupId>
     <artifactId>remote-label-api</artifactId>
