--- a/remote-label-service/remote-label-label-manage/pom.xml
+++ b/remote-label-service/remote-label-label-manage/pom.xml
@@ -48,6 +48,41 @@
             <scope>test</scope>
         </dependency>
 
+        <!--mysql驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
+
+        <!--mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.zko0</groupId>
+            <artifactId>remote-label-commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!--        &lt;!&ndash;代码生成器&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.davidfantasy</groupId>-->
+<!--            <artifactId>mybatis-plus-generator-ui</artifactId>-->
+<!--            <version>2.0.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
     </dependencies>
 
     <build>
