--- a/remote-label-service/remote-label-moniter-register/pom.xml
+++ b/remote-label-service/remote-label-moniter-register/pom.xml
@@ -87,17 +87,24 @@
 <!--            <artifactId>spring-boot-starter-amqp</artifactId>-->
 <!--        </dependency>-->
 
-        <!--        &lt;!&ndash;代码生成器&ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.davidfantasy</groupId>-->
-        <!--            <artifactId>mybatis-plus-generator-ui</artifactId>-->
-        <!--            <version>2.0.0</version>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
+                <!--代码生成器-->
+                <dependency>
+                    <groupId>com.github.davidfantasy</groupId>
+                    <artifactId>mybatis-plus-generator-ui</artifactId>
+                    <version>2.0.0</version>
+                    <scope>test</scope>
+                </dependency>
 
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.zko0</groupId>
+            <artifactId>remote-label-api-label-manage</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
