RabbitMq配置搭建，踩坑与闭坑

--- a/remote-label-service/remote-label-moniter-register/pom.xml
+++ b/remote-label-service/remote-label-moniter-register/pom.xml
@@ -81,11 +81,11 @@
             <scope>compile</scope>
         </dependency>
 
-<!--        &lt;!&ndash;rabbitmq&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-amqp</artifactId>-->
-<!--        </dependency>-->
+        <!--rabbitmq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 
                 <!--代码生成器-->
                 <dependency>
